Controller Pro 1.4.0
====================

New Features:
  - Upgrade flexjson library to version 3.2 (ORCJAVA-498)
  - Support remote command to trigger online sync (ORCJAVA-501)

Bug Fixes:

  - Fixed: Multiple issues in BeehiveCommandCheckServiceTest (ORCJAVA-497)
  - Do not encode password in communication with CCS/DDS (ORCJAVA-495)
  - Never send md5 encoded password to backend (ORCJAVA-503)

Controller Pro 1.3.0
====================

New Features:
  - Add TCPSocketPort for protocols that use TCP (Richard Turner, ORCJAVA-482)
  - Have an option to store password in plain text file instead of keystore (ORCJAVA-493)
  - Add VelbusConfiguration support (ORCJAVA-494)

Controller Pro 1.2.0
====================

New Features:
  - Implement Z-Wave command classes that are needed for configuring
	  Z-Wave nodes (Rainer Hitz, ORCJAVA-440)
  - Add ability to reset RRD4J graph time axis (Richard Turner, ORCJAVA-452)
  - Improvements to the Russound protocol implementation (Torbjorn Osterdahl, ORCJAVA-461)
  - Add possibility of ReadCommand implementations to define
	  their polling interval (Marcus Redeker, ORCJAVA-464)
  - Update HTTP protocol to extend ReadCommand instead of
	  implementing EventListener (Marcus Redeker, ORCJAVA-465)
  - More lenient CORS headers (Christian Bauer, ORCJAVA-472)
  - Improve 1-wire implementation (Eric Bariaux, ORCJAVA-475)
  - Add log messages to Rules Engine (Isaac Martin, Michal Rutka, ORCJAVA-481)
  - Add X10 logging category (ORCJAVA-370)
	- Implement the Z-Wave security layer (COMMAND_CLASS_SECURITY) (Rainer Hitz, ORCJAVA-480)

Bug Fixes:

  - Update Vera implementation to use locale independent string case conversions (ORCJAVA-341)
  - Update X10 implementation to use locale independent string case conversions (ORCJAVA-342)
  - Update Russound implementation to use locale independent string case conversions (ORCJAVA-343)
  - Update DSCIT100 implementation to use locale independent string case conversions (ORCJAVA-344)